2008-06-25  Juanma Barranquero  <lekktu@gmail.com>

	* xdisp.c (syms_of_xdisp) <truncate-partial-width-windows>: Doc fix.
	<scroll-conservatively>: Fix typo in docstring.

	* xselect.c (Fx_send_client_event): Doc fix.

2008-06-25  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (Fx_list_fonts): Call Flist_fonts with the arg PREFER.

	* font.c (font_parse_fcname): Remove unused variables.
	(font_sort_entites): Delete the arg SPEC.  Caller changed.
	Fix for the case of ! best_only.
	(font_delete_unmatched): Check DPI and AVGWIDTH too.

	* lisp.h (Fstring_to_unibyte): EXFUN it.

	* character.h (str_to_unibyte): Extern it.

	* character.c (str_to_unibyte): New function.

	* fns.c (Fstring_to_unibyte): New function.
	(syms_of_fns): Defsubr it.

2008-06-24  Kenichi Handa  <handa@m17n.org>

	* font.c (font_score): Even if the PIXEL_SIZE is the same, check
	DPI too.
	(font_sort_entites): Setup prefer_prop[FONT_DPI_INDEX] too.

2008-06-24  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (${lispsource}loaddefs.el): Rename from
	../lisp/loaddefs.el.
	(bootstrap-clean): Do what distclean does but don't remove
	Makefile.
	(distclean): Depend on bootstrap-clean and remove Makefile.

2008-06-24  Chong Yidong  <cyd@stupidchicken.com>

	* buffer.h (struct buffer): New member word_wrap.

	* buffer.c (syms_of_buffer): New variables default-word-wrap and
	word-wrap.
	(init_buffer_once): Initialize them.

	* dispextern.h (struct it): Replace bool truncate_lines_p with a
	line_wrap enum possessing three possible values.

	* termopts.h: Replace truncate_partial_width_windows with
	Vtruncate_partial_width_windows.

	* dispnew.c (direct_output_for_insert): Avoid direct output when
	inserting a space with word wrap on.

	* indent.c (compute_motion): Obey integer values of
	truncate-partial-width-windows.

	* xdisp.c (Vtruncate_partial_width_windows): New Lisp_Object,
	replacing truncate_partial_width_windows.
	(init_iterator): If Vtruncate_partial_width_windows is an integer,